@@ -185,10 +185,10 @@ class WheelsInfo:
     """Wheels module output data"""
     radiusFront: float = 0
     radiusRear: float = 0
-    slipRatio: tuple = field(default_factory=tuple)
+    slipRatio: list = field(default_factory=list)
 
     def __post_init__(self):
-        self.slipRatio = 0,0,0,0
+        self.slipRatio = [0,0,0,0]
 
 
 class ModuleInfo:
